2004-06-29  Carl Sorensen  <carldsorensen@attbi.net>

	* scm/fret-diagrams.scm (draw-dots): default values for dot size
	and dot-position now depend on finger-code value; in-dot makes
	dots larger and centered.
	(draw-barre): added straight-barre indicator option
	(draw-dots): made fontify-text-white work.

	* music-drawing-routines.ps: added /draw_white_text

	* scm/output-tex.scm:  added white-text

	* scm/output-ps.scm:  added white-text

	* scm/lily.scm (ly:all-stencil-expressions): Added white-text to 
	list of stencil expressions

	* scm/stencil.scm: Added fontify-text-white

2004-06-29  Heikki Junes  <hjunes@cc.hut.fi>

	* input/regression/+.ly: use @unnumbered section.

2004-06-28  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* elisp/lilypond-mode.el (LilyPond-guile): set current module to
	(*anonymous-ly-0*) iso. (*anonymous-ly-1*)

2004-06-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/guile-gnome.sh (PATH): GUILE CVS is still fubarred.

2004-06-26  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/ly-from-scheme.scm (read-lily-expression): #$( ... )
	was causing an error. (was not actually commited in 2004-06-20)

	* input/regression/lily-in-scheme.ly (withPaddingC): does not
	breaks anymore

2004-06-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/my-lily-parser.cc (parse_string): switch module too.

2004-06-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/INSTALL.texi (Top): Add guile, python and
	ec-fonts-mftraced to running requirements.

2004-06-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/my-lily-lexer.cc (My_lily_lexer): copy scopes so temporary
	assignments don't reach the original file.

	* lily/my-lily-parser.cc (My_lily_parser): only copy lexer if it
	exists

2004-06-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm: 
	* buildscripts/guile-gnome.sh: Update wrt fixed GUILE CVS.

	* debian/: Apply Debian patch (Anthony Fok).

2004-06-22  Heikki Junes   <hjunes@cc.hut.fi>
